virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: apis-service-ingress
spec:
  hosts: 
  - '*'
  gateways:
  - apis-gateway
  http:
  - match:
    - headers:
        user-agent:
          regex: .*Chrome.*
    route:
    - destination:
        host: romo-valadez-kubernetes-service
  - route:
    - destination:
        host: romo-valadez-istio-service
